--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.diabolicallabs</groupId>
@@ -31,7 +29,7 @@
         <url>https://github.com/diabolicallabs/vertx-process-manager</url>
         <connection>scm:git:git@github.com:diabolicallabs/vertx-process-manager.git</connection>
         <developerConnection>scm:git:git@github.com:diabolicallabs/vertx-process-manager.git</developerConnection>
-        <tag>vertx-process-manager-0.8</tag>
+        <tag>vertx-process-manager-0.8-SNAPSHOT</tag>
     </scm>
 
     <issueManagement>
