--- a/pom.xml
+++ b/pom.xml
@@ -44,17 +44,18 @@
 
     <properties>
         <main.verticle>com.diabolicallabs.process.manager.Verticle</main.verticle>
-        <vertx.version>3.3.2</vertx.version>
+        <vertx.version>3.5.1</vertx.version>
         <hazelcast.version>3.6</hazelcast.version>
         <h2.version>1.3.161</h2.version>
         <hibernate.version>4.2.0.Final</hibernate.version>
         <hibernate.core.version>4.2.0.Final</hibernate.core.version>
         <btm.version>2.1.4</btm.version>
-        <jbpm.version>6.4.0.Final</jbpm.version>
+        <jbpm.version>7.7.0.Final</jbpm.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.codehaus.jettison/jettison -->
+
         <dependency>
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
@@ -69,6 +70,7 @@
             <version>${vertx.version}</version>
         </dependency>
 
+        <!-- Languages -->
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-lang-js</artifactId>
@@ -95,9 +97,23 @@
 
         <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-rx-java</artifactId>
+            <artifactId>vertx-lang-kotlin</artifactId>
             <version>${vertx.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-lang-scala_2.12</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-rx-java2</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
+        <!-- Generation and Proxy -->
 
         <dependency>
             <groupId>io.vertx</groupId>
@@ -232,11 +248,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.jbpm</groupId>
             <artifactId>jbpm-workitems</artifactId>
             <version>${jbpm.version}</version>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -293,7 +311,6 @@
             <version>1.7.5</version>
         </dependency>
 
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -310,46 +327,16 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.3</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                         <annotationProcessors>
                             <annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
                         </annotationProcessors>
-                        <generatedSourcesDirectory>
-                            ${project.basedir}/src/main/generated
-                        </generatedSourcesDirectory>
-                        <compilerArgs>
-                            <arg>-AoutputDirectory=${project.basedir}/src/main</arg>
-                        </compilerArgs>
-                        <debuglevel>lines,vars,source</debuglevel>
                     </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
-
         <plugins>
-
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>add-groovy-sources</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>src/main/groovy</directory>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -361,38 +348,27 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>io.vertx.core.Launcher</Main-Class>
                                         <Main-Verticle>${main.verticle}</Main-Verticle>
                                     </manifestEntries>
                                 </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                     <resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource>
                                 </transformer>
                             </transformers>
                             <artifactSet>
                             </artifactSet>
-                            <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
+                            <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar
+                            </outputFile>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
-
     </build>
-
-
 </project>
