--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.diabolicallabs</groupId>
@@ -29,7 +30,7 @@
         <url>https://github.com/diabolicallabs/vertx-process-manager</url>
         <connection>scm:git:git@github.com:diabolicallabs/vertx-process-manager.git</connection>
         <developerConnection>scm:git:git@github.com:diabolicallabs/vertx-process-manager.git</developerConnection>
-        <tag>vertx-process-manager-0.8-SNAPSHOT</tag>
+        <tag>vertx-process-manager-${project.version}</tag>
     </scm>
 
     <issueManagement>
@@ -44,13 +45,13 @@
 
     <properties>
         <main.verticle>com.diabolicallabs.process.manager.Verticle</main.verticle>
-        <vertx.version>3.5.1</vertx.version>
-        <hazelcast.version>3.6</hazelcast.version>
+        <vertx.version>3.5.3</vertx.version>
+        <hazelcast.version>3.8.2</hazelcast.version>
         <h2.version>1.3.161</h2.version>
         <hibernate.version>4.2.0.Final</hibernate.version>
         <hibernate.core.version>4.2.0.Final</hibernate.core.version>
         <btm.version>2.1.4</btm.version>
-        <jbpm.version>7.7.0.Final</jbpm.version>
+        <jbpm.version>7.11.0.Final</jbpm.version>
         <java.version>1.8</java.version>
     </properties>
 
@@ -259,22 +260,24 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate.version}</version><exclusions>
-            <exclusion>
-                <artifactId>javassist</artifactId>
-                <groupId>org.javassist</groupId>
-            </exclusion>
-        </exclusions>
+            <version>${hibernate.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>javassist</artifactId>
+                    <groupId>org.javassist</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version><exclusions>
-            <exclusion>
-                <artifactId>javassist</artifactId>
-                <groupId>org.javassist</groupId>
-            </exclusion>
-        </exclusions>
+            <version>${hibernate.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>javassist</artifactId>
+                    <groupId>org.javassist</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -321,22 +324,30 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.3</version>
-                    <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                        <annotationProcessors>
-                            <annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
-                        </annotationProcessors>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessors>
+                        <annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
+                    </annotationProcessors>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Main-Verticle>${main.verticle}</Main-Verticle>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -368,6 +379,63 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.23.0</version>
+                <executions>
+                    <execution>
+                        <id>docker-build</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>diabolicallabs/${project.artifactId}</name>
+                            <alias>${project.artifactId}</alias>
+                            <build>
+                                <from>openjdk:8</from>
+                                <tags>
+                                    <tag>latest</tag>
+                                    <tag>${project.version}</tag>
+                                </tags>
+                                <assembly>
+                                    <mode>dir</mode>
+                                    <inline xmlns="http://maven.apache.org/ASSEMBLY/2.0.0"
+                                            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                                            xsi:schemaLocation="http://maven.apache.org/ASSEMBLY/2.0.0 http://maven.apache.org/xsd/assembly-2.0.0.xsd http://maven.apache.org/ASSEMBLY/2.0.0 ">
+                                        <id>diabolical-service</id>
+                                        <files>
+                                            <file>
+                                                <source>
+                                                    ${project.build.directory}/${project.artifactId}-${project.version}-fat.jar
+                                                </source>
+                                                <outputDirectory>./</outputDirectory>
+                                                <destName>fat.jar</destName>
+                                            </file>
+                                            <file>
+                                                <source>
+                                                    ${project.build.directory}/classes/config.json
+                                                </source>
+                                                <outputDirectory>./</outputDirectory>
+                                            </file>
+                                        </files>
+                                    </inline>
+                                </assembly>
+                                <cmd>
+                                    <shell>
+                                        java -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n -jar /maven/fat.jar -cluster -conf /maven/config.json
+                                    </shell>
+                                </cmd>
+                            </build>
+                        </image>
+                    </images>
+                </configuration>
             </plugin>
         </plugins>
     </build>
